<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--FrameLayout-->
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <!--RadioGroup-->
    <RadioGroup
        android:id="@+id/rg_bottom_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp">

        <RadioButton
            android:id="@+id/rb_foundation"
            style="@style/botttom_tag_style"
            android:drawableTop="@drawable/selector_home_rb_bottom_tab"
            android:text="@string/foundation" />

        <RadioButton
            android:id="@+id/rb_summary"
            style="@style/botttom_tag_style"
            android:drawableTop="@drawable/selector_summary_rb_bottom_tab"
            android:text="@string/summary" />

        <RadioButton
            android:id="@+id/rb_third_party"
            style="@style/botttom_tag_style"
            android:drawableTop="@drawable/selector_third_rb_bottom_tab"
            android:text="@string/third_party" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/botttom_tag_style"
            android:drawableTop="@drawable/selector_my_rb_bottom_tab"
            android:text="@string/my" />

    </RadioGroup>

</LinearLayout>