<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_foundation"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />-->

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:indicator_drawable_selected="@drawable/ovel_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:src="@drawable/ovel_normal"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:drawableLeft="@drawable/ic_foundation"
                    android:drawablePadding="8dp"
                    android:text="@string/foundation"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_introduction"
                    style="@style/foundation_text_style"
                    android:drawableTop="@drawable/ic_foundation_introduction"
                    android:text="@string/android_introduction" />

                <TextView
                    android:id="@+id/tv_assembly"
                    style="@style/foundation_text_style"
                    android:drawableTop="@drawable/ic_foundation_assembly"
                    android:text="@string/andriod_assembly" />

                <TextView
                    android:id="@+id/tv_andriod_ui"
                    style="@style/foundation_text_style"
                    android:drawableTop="@drawable/ic_foundation_ui"
                    android:text="@string/andriod_ui" />

                <TextView
                    android:id="@+id/tv_photo_animation"
                    style="@style/foundation_text_style"
                    android:drawableTop="@drawable/ic_foundation_photo_animation"
                    android:text="@string/photo_animation" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:drawableLeft="@drawable/data"
                    android:drawablePadding="8dp"
                    android:text="@string/data"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_radius_green_light"
                    android:drawableLeft="@drawable/ic_foundation_storage"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/andriod_storage"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/tv_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_radius_green_light"
                    android:drawableLeft="@drawable/ic_foundation_internet"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/andriod_internet"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:drawableLeft="@drawable/advance"
                    android:drawablePadding="8dp"
                    android:text="@string/advance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_radius_green_light"
                    android:drawableLeft="@drawable/ic_foundation_event"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/andriod_event"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/tv_advance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_radius_green_light"
                    android:drawableLeft="@drawable/ic_foundation_advance"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/andriod_advance"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:drawableLeft="@drawable/interview"
                    android:drawablePadding="8dp"
                    android:text="@string/interview"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_foundation_interview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_swipe_right"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/andriod_interview"
                    android:textColor="@color/text_color" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>